@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Changed markdown class from bash to shell .md files
           - Added support for triple grave in Markdown
           - Moved input scrubbing function to the Request object
 
